--- a/ChangeLog
+++ b/ChangeLog
@@ -52,6 +52,21 @@
 
 2004-10-14  Carl Hetherington <inkscape@carlh.net>
 
+	* src/livarot/int-line.cpp: coding style cleanups.
+
+	* src/livarot/float-line.cpp, src/livarot/float-line.h:
+	refactoring, removal of dead code.
+
+	* src/display/guideline.cpp, src/display/guideline.h: coding style
+	cleanups.
+
+	* src/livarot/Path.cpp, src/livarot/Path.h,
+	src/livarot/PathConversion.cpp, src/livarot/PathCutting.cpp,
+	src/livarot/PathSimplify.cpp, src/livarot/PathStroke.cpp: merge
+	Path::path_lineto and Path::path_lineto_b.
+
+2004-10-14  Carl Hetherington <inkscape@carlh.net>
+
 	* src/Path.cpp, src/Path.h, src/PathConversion.cpp,
 	src/PathCutting.cpp, src/PathOutline.cpp, src/PathSimplify.cpp,
 	src/ShapeMisc.cpp: use a vector of pointers for Path::descr_cmd.
