--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2004-10-19  Carl Hetherington  <inkscape@carlh.net>
 
+	* src/livarot/Path.h, src/livarot/PathSimplify.cpp: more
+	simplification cleanups.
+
+	* src/livarot/PathStroke.cpp: coding style cleanups.
+
+	* src/livarot/Path.h, src/livarot/PathSimplify.cpp,
+	src/livarot/PathStroke.cpp: more cleanups; don't modify Path::pts
+	and Path::nbPt.
+
 	* src/livarot/Path.cpp, src/livarot/Path.h,
 	src/livarot/PathConversion.cpp, src/livarot/PathCutting.cpp,
 	src/livarot/PathSimplify.cpp, src/livarot/PathStroke.cpp: use a
@@ -16,6 +25,9 @@
 	* src/livarot/PathConversion.cpp: coding style cleanups.
 
 	* src/livarot/PathConversion.cpp: fix for bug 1048827.
+
+	* src/livarot/Path.h, src/livarot/PathSimplify.cpp: clean up
+	simplification code. 
 
 2004-10-17  MenTaLguY  <mental@rydia.net>
 
