--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-10-20  Carl Hetherington  <inkscape@carlh.net>
+
+	* src/livarot/Path.cpp: fix for 1050379, and probably lots of
+	others.
+
+	* src/livarot/Path.h, src/livarot/PathOutline.cpp: bug fix for a
+	previous commit.
+
 2004-10-19  Carl Hetherington  <inkscape@carlh.net>
 
 	* src/livarot/Path.h, src/livarot/PathSimplify.cpp: more
