--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-10-21  Carl Hetherington  <inkscape@carlh.net>
+
+	* src/livarot/Path.cpp, src/livarot/Path.h,
+	src/livarot/PathConversion.cpp, src/livarot/PathCutting.cpp,
+	src/livarot/PathOutline.cpp, src/livarot/PathSimplify.cpp,
+	src/livarot/ShapeMisc.cpp: excise separate path description data
+	structure.
+
 2004-10-20  Carl Hetherington  <inkscape@carlh.net>
 
 	* src/livarot/Path.cpp: fix for 1050379, and probably lots of
