--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2004-10-21  MenTaLguY  <mental@rydia.net>
+
+	* src/util/Makefile_insert, src/util/copy-list.h: add list copy thingy
+
+	* src/util/list.h: add rest()
+
+	* src/util/reverse-list.h: bug fixes to reverse_list_in_place()
+
+	* src/widgets/layer-selector.cpp, src/widgets/layer-selector.h:
+	  more work on layer selector
+
 2004-10-21  Carl Hetherington  <inkscape@carlh.net>
 
 	* src/livarot/Path.cpp, src/livarot/Path.h,
