--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-10-23  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
+
+	* src/display/bezier-utils-test.cpp: Disable a test, replacing with a
+	  todo printf and adding a comment explaining.
+
 2004-10-22  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
 	* src/pencil-context.cpp: Ensure that data points array p is uniqued
