--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+2004-10-24  MenTaLguY  <mental@rydia.net>
+
+	* src/Makefile.am: added/removed files
+
+	* src/util/copy-list.h: nobody's using it right now, get rid of it
+
+	* src/traits/copy.h, src/traits/list-copy.h:
+	  traits for determining the type to make a copy of a value
+
+	* src/sp-item.cpp, src/util/filter-list.h src/util/map-list.h,
+	  src/util/reverse-list.h, src/widgets/layer-selector.cpp
+	  src/xml/sp-repr-action.cpp:
+
+	  let the list functions infer their own result type (where possible)
+
+	* src/util/forward-pointer-iterator.h: its value type is a reference
+
 2004-10-23  MenTaLguY  <mental@rydia.net>
 
 	* src/desktop.cpp: removed vertical usize limits on statusbar
