--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-10-27  Carl Hetherington  <inkscape@carlh.net>
+
+	* src/extension/output.cpp: better fix for 1004134 after advice
+	from Ted.
+
 2004-10-26  Carl Hetherington  <inkscape@carlh.net>
 
 	* src/extension/output.cpp: don't reset modified flag until after
