--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 	* src/libnr/nr-point.h: use NR::X and NR::Y instead of "0" and "1".
 	* src/dialogs/export.cpp: stack/register weirdness requires a function
 	  call to get true == comparison of NR::Rect's.  Closes bug #1048614.
+	* src/dialogs/align.cpp: saving erased iterator.  Closes bug #1054270.
 
 2004-10-27  Carl Hetherington  <inkscape@carlh.net>
 
