--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
 	* src/dialogs/export.cpp: stack/register weirdness requires a function
 	  call to get true == comparison of NR::Rect's.  Closes bug #1048614.
 	* src/dialogs/align.cpp: saving erased iterator.  Closes bug #1054270.
+	* share/extensions/ill2svg.pl: added strict, warnings, and detection
+	  of Image::Magick module.  Closes bug #990659.
 
 2004-10-27  Carl Hetherington  <inkscape@carlh.net>
 
