--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-10-29  MenTaLguY  <mental@rydia.net>
+
+	* src/widgets/layer-selector.cpp:
+	  unselect objects when layer is manually switched
+
 2004-10-28  Kees Cook  <kees@outflux.net>
 
 	* src/document-undo.cpp, src/document.cpp, src/sp-namedview.cpp,
