--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-10-29  Jon A. Cruz  <jon@joncruz.org>
+
+	* src/sp-image.cpp, src/extension/internal/gdkpixbuf-input.cpp:
+	  Refactoring filenames and file opening
+	  Scales imported images if DPI is known and not 72 DPI. Fixes
+	  #1029755
+
 2004-10-29  MenTaLguY  <mental@rydia.net>
 
 	* src/widgets/layer-selector.cpp, src/verbs.cpp:
