--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2004-10-29  Bryce Harrington <bryce@bryceharrington.org>
+	* layer-fns.cpp:  documenting
+
 2004-10-29  Kees Cook  <kees@outflux.net>
 
 	* src/dialogs/export.cpp: moved function-based static state variable
@@ -1156,7 +1159,7 @@
 	* src/sp-anchor.cpp: coding style cleanups.  Remove unnecessary
 	static variable.
 
-2004-08-18  Bryce Harrington <bryce@bryceharrington.com>
+2004-08-18  Bryce Harrington <bryce@bryceharrington.org>
 
 	* autogen.sh:  Fixing the 'missing ltmain.sh' bug
 
@@ -2421,7 +2424,7 @@
 
 	* src/select-context.cpp: use new snapping API.
 
-2004-08-17  Bryce Harrington  <bryce@bryceharrington.com>
+2004-08-17  Bryce Harrington  <bryce@bryceharrington.org>
 
 	*  nodepath.cpp path-chemistry.cpp selection-chemistry.cpp,
 	   seltrans.cpp sp-typeset.cpp splivarot.cpp text-context.cpp,
@@ -2767,7 +2770,7 @@
 	  mark automatically added gradients, patterns, and markers for orphan
 	  collection
 
-2004-06-06  Bryce Harrington <bryce@bryceharrington.com>
+2004-06-06  Bryce Harrington <bryce@bryceharrington.org>
 
 	* libnrtype/nr-type-xft.cpp, libnrtype/nr-font.cpp,
 	  libnrtype/nr-rasterfont.cpp, libnrtype/nr-type-directory.cpp,
