--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2004-10-29  Bryce Harrington <bryce@bryceharrington.org>
 	* layer-fns.cpp:  documenting
-
+	* layer-selector.cpp:  documenting & fixing funky widget resizing
+	
 2004-10-29  Kees Cook  <kees@outflux.net>
 
 	* src/dialogs/export.cpp: moved function-based static state variable
