add ability to set inkscape:label from "Item Properties", remove id setting from "Item Properties", switch to using SPObject::label()/SPObject?::defaultLabel() in UI where object ID is currently used.  Documenting.
(bzr r4694)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
 2004-10-29  Bryce Harrington <bryce@bryceharrington.org>
+
 	* layer-fns.cpp:  documenting
 	* layer-selector.cpp:  documenting & fixing funky widget resizing
+	* object-ui.cpp, dialogs/item-properties.cpp, sp-object.h,
+	  sp-object.cpp: add ability to set inkscape:label from "Item
+	  Properties", remove id setting from "Item Properties", switch to
+	  using SPObject::label()/SPObject?::defaultLabel() in UI where
+	  object ID is currently used.  Documenting.
 	
 2004-10-29  Kees Cook  <kees@outflux.net>
 
