--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-10-30  Kees Cook  <kees@outflux.net>
+
+	* src/sp-metadata.cpp, src/sp-metadata.h, src/Makefile_insert,
+	src/document.cpp, src/sp-object-repr.cpp, src/sp-object.cpp:
+	I've created my very first SPObject!  SPMetadata is alive!  No
+	more nasty hack to have it disappear from SVG Plain.  Mental
+	won't have to take away my CVS access any more!  :)
+
 2004-10-30  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
 	* src/libnr/nr-matrix.cpp (nr_matrix_invert):
