update from Adib Taraben
(bzr r4720)

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 	I've created my very first SPObject!  SPMetadata is alive!  No
 	more nasty hack to have it disappear from SVG Plain.  Mental
 	won't have to take away my CVS access any more!  :)
+	* inkscape2.nsi: update from Adib Taraben
 
 2004-10-30  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
