--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-10-30  Bryce Harrington <bryce@bryceharrington.org>
+
+	* src/dialogs/item-properties.cpp, src/sp-object.h:  Cleaning up
+	stubs, disabling some more of the desc code to prevent crash.	  
+
 2004-10-30  Kees Cook  <kees@outflux.net>
 
 	* src/sp-metadata.cpp, src/sp-metadata.h, src/Makefile_insert,
